chore: update 84 files
Changed: .zcode/plans/plan-sess_451d2b79-0a81-4844-8c10-31fa38d322bb.md, .zcode/plans/plan-sess_60e33db1-d7b8-4f74-a05f-9964b018e4ec.md, .zcode/plans/plan-sess_b0cd7c2a-8ee2-4017-952e-03cea49ada94.md, Cargo.lock, Cargo.toml, ... (84 total)
